--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "require": {
-    "twig/twig": "1.24.0",
-    "silex/silex": "~2.0"
-  }
+    "require": {
+        "silex/silex": "^2.0",
+        "twig/twig": "^2.1"
+    }
 }
