--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "silex/silex": "^2.0"
+        "silex/silex": "^2.0",
+        "twig/twig": "^2.1",
+        "symfony/twig-bridge": "^3.2"
     }
 }
