Add and settings DB Add extension "symfony/twig-bridge"

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "silex/silex": "^2.0",
         "twig/twig": "^2.1",
-        "symfony/twig-bridge": "^3.2"
+        "symfony/twig-bridge": "^3.2",
+        "doctrine/dbal": "^2.5"
     }
 }
