--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "silex/silex": "^2.0",
         "twig/twig": "^2.1",
         "symfony/twig-bridge": "^3.2",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "dflydev/doctrine-orm-service-provider": "^2.0"
     }
 }
